# classyq

./: .clang-format  .editorconfig  .envrc  .gitignore  .readthedocs.yaml  CMakeLists.txt  README.md  flake.nix
.github/: classyq-gha.yml
.github/workflows/: testing.yml  tests.yml
cmake/custom/: classyq.cmake
docs/: .gitignore  Doxyfile.in  bibliography.bib  conf.py  index.rst  requirements.txt  zreferences.rst
docs/programmers/: manual.rst
docs/programmers/code_reference/: cavity.rst  solver.rst  utils.rst
src/: CMakeLists.txt  LeopardiPartition.cpp  LeopardiPartition.hpp  Sphere.cpp  Sphere.hpp  TsLess.cpp  TsLess.hpp  dervs.cpp  example.cpp  example.hpp  foo.cpp  math_utils.hpp
src/cavity/: CMakeLists.txt  Sphere.cpp  Sphere.hpp  TsLess.cpp  TsLess.hpp
src/solver/: CMakeLists.txt  Isotropic.cpp  Solver.hpp  SolverImpl.hpp
src/utils/: CMakeLists.txt  CRTP.hpp  FiniteDifference.hpp  Printable.hpp  math_utils.cpp  math_utils.hpp  utils.hpp
tests/: CMakeLists.txt  add.cpp  utils.hpp
tests/cavity/: CMakeLists.txt  leopardi.cpp  leopardi.h5  tsless.cpp
